css/memberreport.css
/* Member Report Styles */
#member-report {
	display: none;
	background: linear-gradient(to bottom, rgba(9, 47, 49, 0.5) 0%, rgba(2, 7, 10, 0.5) 100%);
	border: 1px solid #197576;
	width: 1250px;
	padding-bottom: 15px;
	margin: 0 auto;
	border-radius: 10px;
	position: relative;
}
h2 {
	clear: both;
	background: linear-gradient(to bottom, rgba(9, 47, 49, 0.5) 0%, rgba(2, 7, 10, 0.5) 100%);
	border-bottom: 1px solid #197576;
	padding: 15px;
	font-size: 25px;
	position: relative;
}
h2 a, h2 a:active, h2 a:visited {
	color: #FFF;
}

#member-report > p {
	text-align: center;
}

#member-details {
	list-style-type: none;
	border-bottom: 1px solid #197576;
	margin-bottom: 30px;
	overflow: hidden;
	background-color: #0D3439;
}
#member-details > li {
	display: block;
	float: left;
	height: 50px;
	text-align: center;
	width: 20%;
	padding-top: 15px;
}
#member-details strong {
	display: block;
}

/* Outfit Rank Icons */
span.rank {
	display: inline-block;
	background-repeat: no-repeat;
	margin-bottom: 5px;
	margin-right: 7px;
	width: 24px;
	height: 24px;
	vertical-align: middle;
}
.rank.r1 {
	background-image: url(../img/rank-1.png);
}
.rank.r2 {
	background-image: url(../img/rank-2.png);
}
.rank.r3 {
	background-image: url(../img/rank-3.png);
}
.rank.r4 {
	background-image: url(../img/rank-4.png);
}
.rank.r5 {
	background-image: url(../img/rank-5.png);
}

/* Online/Offline Status Indicator */
.status {
	border: 1px solid #000;
	border-radius: 3px;
	display: inline-block;
	margin-left: 7px;
	width: 10px;
	height: 11px;
	vertical-align: middle;
}
.online.status {
	background-color: #0f0;
}
.offline.status {
	background-color: #d00;
}

/* Legend */
#legend {
	text-align: center;
	position: absolute;
	top: 190px;
	left: 30px;
	list-style-type: none;
	z-index: 2;
}
#legend li {
	display: inline-block;
	margin: 0 6px 0 15px;
}
#legend span:first-child {
	margin-left: 0;
}
#legend span {
	border: 1px solid #197576;
	display: inline-block;
	width: 12px;
	height: 12px;
	margin-right: 6px;
	vertical-align: text-top;
}

/* PowerTip */
#powerTip {
	border: 1px solid #197576;
	box-shadow: 0 0 5px #000;
	max-width: 90%;
	white-space: normal;
}
#powerTip.n:before,
#powerTip.ne:before, #powerTip.nw:before,
#powerTip.nw-alt:before, #powerTip.ne-alt:before,
#powerTip.sw-alt:before, #powerTip.se-alt:before {
	border-top-color: #000;
}
#powerTip.e:before {
	border-right-color: #000;
}
#powerTip.s:before,
#powerTip.se:before, #powerTip.sw:before,
#powerTip.sw-alt:before, #powerTip.se-alt:before {
	border-bottom-color: #000;
}
#powerTip.w:before {
	border-left-color: #000;
}
#powerTip span {
	display: block;
}
#powerTip .long {
	-webkit-column-count: 2;
	-webkit-column-width: 225px;
	-moz-column-count: 2;
	-moz-column-width: 225px;
	-ms-column-count: 2;
	-ms-column-width: 225px;
	column-count: 2;
	column-width: 225px;
	width: 462px;
}
#powerTip p {
	overflow: hidden;
	margin-bottom: 15px;
	-webkit-column-break-inside: avoid;
	-moz-column-break-inside: avoid;
	-ms-column-break-inside: avoid;
	-o-column-break-inside: avoid;
	/*column-break-inside: avoid;*/
	-moz-page-break-inside: avoid;
	page-break-inside: avoid;
	break-inside: avoid-column;
	display: inline-block;
}
#powerTip p span:first-child {
	color: aqua;
	font-weight: bold;
}

